parser_analysis/yapl_s_new.output
Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection
    6                   | f_string_expression

    7 f_string_expression: FSTRING_START f_string_body FSTRING_END

    8 f_string_body: ε
    9              | f_string_body STRING_LITERAL_PART
   10              | f_string_body interpolation_block

   11 interpolation_block: INTERPOLATION_START expression INTERPOLATION_END

   12 constant: I_CONSTANT
   13         | F_CONSTANT
   14         | ENUMERATION_CONSTANT

   15 enumeration_constant: IDENTIFIER

   16 string: STRING_LITERAL
   17       | FUNC_NAME

   18 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   19 generic_assoc_list: generic_association
   20                   | generic_assoc_list ',' generic_association

   21 generic_association: type_name ':' assignment_expression
   22                    | DEFAULT ':' assignment_expression

   23 postfix_expression: primary_expression
   24                   | postfix_expression '[' expression ']'
   25                   | postfix_expression '(' ')'
   26                   | postfix_expression '(' argument_expression_list ')'
   27                   | postfix_expression '.' IDENTIFIER
   28                   | postfix_expression PTR_OP IDENTIFIER
   29                   | postfix_expression INC_OP
   30                   | postfix_expression DEC_OP
   31                   | '(' type_name ')' '{' initializer_list '}'
   32                   | '(' type_name ')' '{' initializer_list ',' '}'

   33 argument_expression_list: assignment_expression
   34                         | argument_expression_list ',' assignment_expression

   35 unary_expression: postfix_expression
   36                 | INC_OP unary_expression
   37                 | DEC_OP unary_expression
   38                 | unary_operator cast_expression
   39                 | SIZEOF unary_expression
   40                 | SIZEOF '(' type_name ')'
   41                 | ALIGNOF '(' type_name ')'

   42 unary_operator: '&'
   43               | '*'
   44               | '+'
   45               | '-'
   46               | '~'
   47               | '!'

   48 cast_expression: unary_expression
   49                | '(' type_name ')' cast_expression

   50 multiplicative_expression: cast_expression
   51                          | multiplicative_expression '*' cast_expression
   52                          | multiplicative_expression '/' cast_expression
   53                          | multiplicative_expression '%' cast_expression

   54 additive_expression: multiplicative_expression
   55                    | additive_expression '+' multiplicative_expression
   56                    | additive_expression '-' multiplicative_expression

   57 shift_expression: additive_expression
   58                 | shift_expression LEFT_OP additive_expression
   59                 | shift_expression RIGHT_OP additive_expression

   60 concatenation_expression: shift_expression
   61                         | concatenation_expression '@' shift_expression

   62 relational_expression: concatenation_expression
   63                      | relational_expression '<' concatenation_expression
   64                      | relational_expression '>' concatenation_expression
   65                      | relational_expression LE_OP concatenation_expression
   66                      | relational_expression GE_OP concatenation_expression
   67                      | relational_expression TH_OP concatenation_expression

   68 equality_expression: relational_expression
   69                    | equality_expression EQ_OP relational_expression
   70                    | equality_expression NE_OP relational_expression

   71 and_expression: equality_expression
   72               | and_expression '&' equality_expression

   73 exclusive_or_expression: and_expression
   74                        | exclusive_or_expression '^' and_expression

   75 inclusive_or_expression: exclusive_or_expression
   76                        | inclusive_or_expression '|' exclusive_or_expression

   77 logical_and_expression: inclusive_or_expression
   78                       | logical_and_expression AND_OP inclusive_or_expression

   79 logical_or_expression: logical_and_expression
   80                      | logical_or_expression OR_OP logical_and_expression

   81 conditional_expression: logical_or_expression

   82 assignment_expression: conditional_expression
   83                      | unary_expression assignment_operator assignment_expression

   84 assignment_operator: '='
   85                    | MUL_ASSIGN
   86                    | DIV_ASSIGN
   87                    | MOD_ASSIGN
   88                    | ADD_ASSIGN
   89                    | SUB_ASSIGN
   90                    | LEFT_ASSIGN
   91                    | RIGHT_ASSIGN
   92                    | AND_ASSIGN
   93                    | XOR_ASSIGN
   94                    | OR_ASSIGN

   95 expression: assignment_expression
   96           | expression ',' assignment_expression

   97 constant_expression: conditional_expression

   98 declaration: declaration_specifiers ';'
   99            | declaration_specifiers init_declarator_list ';'
  100            | static_assert_declaration

  101 declaration_specifiers: storage_class_specifier declaration_specifiers
  102                       | storage_class_specifier
  103                       | type_specifier declaration_specifiers
  104                       | type_specifier
  105                       | type_qualifier declaration_specifiers
  106                       | type_qualifier
  107                       | function_specifier declaration_specifiers
  108                       | function_specifier
  109                       | alignment_specifier declaration_specifiers
  110                       | alignment_specifier

  111 init_declarator_list: init_declarator
  112                     | init_declarator_list ',' init_declarator

  113 init_declarator: declarator '=' initializer
  114                | declarator

  115 storage_class_specifier: TYPEDEF
  116                        | EXTERN
  117                        | STATIC
  118                        | THREAD_LOCAL
  119                        | AUTO
  120                        | REGISTER

  121 type_specifier: VOID
  122               | CHAR
  123               | SHORT
  124               | INT
  125               | LONG
  126               | FLOAT
  127               | DOUBLE
  128               | SIGNED
  129               | UNSIGNED
  130               | BOOL
  131               | COMPLEX
  132               | IMAGINARY
  133               | atomic_type_specifier
  134               | struct_or_union_specifier
  135               | enum_specifier
  136               | TYPEDEF_NAME

  137 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  138                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  139                          | struct_or_union IDENTIFIER

  140 struct_or_union: STRUCT
  141                | UNION

  142 struct_declaration_list: struct_declaration
  143                        | struct_declaration_list struct_declaration

  144 struct_declaration: specifier_qualifier_list ';'
  145                   | specifier_qualifier_list struct_declarator_list ';'
  146                   | static_assert_declaration

  147 specifier_qualifier_list: type_specifier specifier_qualifier_list
  148                         | type_specifier
  149                         | type_qualifier specifier_qualifier_list
  150                         | type_qualifier

  151 struct_declarator_list: struct_declarator
  152                       | struct_declarator_list ',' struct_declarator

  153 struct_declarator: ':' constant_expression
  154                  | declarator ':' constant_expression
  155                  | declarator

  156 enum_specifier: ENUM '{' enumerator_list '}'
  157               | ENUM '{' enumerator_list ',' '}'
  158               | ENUM IDENTIFIER '{' enumerator_list '}'
  159               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  160               | ENUM IDENTIFIER

  161 enumerator_list: enumerator
  162                | enumerator_list ',' enumerator

  163 enumerator: enumeration_constant '=' constant_expression
  164           | enumeration_constant

  165 atomic_type_specifier: ATOMIC '(' type_name ')'

  166 type_qualifier: CONST
  167               | RESTRICT
  168               | VOLATILE
  169               | ATOMIC

  170 function_specifier: INLINE
  171                   | NORETURN

  172 alignment_specifier: ALIGNAS '(' type_name ')'
  173                    | ALIGNAS '(' constant_expression ')'

  174 declarator: pointer direct_declarator
  175           | direct_declarator

  176 direct_declarator: IDENTIFIER
  177                  | '(' declarator ')'
  178                  | direct_declarator '[' ']'
  179                  | direct_declarator '[' '*' ']'
  180                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  181                  | direct_declarator '[' STATIC assignment_expression ']'
  182                  | direct_declarator '[' type_qualifier_list '*' ']'
  183                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  184                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  185                  | direct_declarator '[' type_qualifier_list ']'
  186                  | direct_declarator '[' assignment_expression ']'
  187                  | direct_declarator '(' parameter_type_list ')'
  188                  | direct_declarator '(' ')'
  189                  | direct_declarator '(' identifier_list ')'

  190 pointer: '*' type_qualifier_list pointer
  191        | '*' type_qualifier_list
  192        | '*' pointer
  193        | '*'

  194 type_qualifier_list: type_qualifier
  195                    | type_qualifier_list type_qualifier

  196 parameter_type_list: parameter_list ',' ELLIPSIS
  197                    | parameter_list

  198 parameter_list: parameter_declaration
  199               | parameter_list ',' parameter_declaration

  200 parameter_declaration: declaration_specifiers declarator
  201                      | declaration_specifiers abstract_declarator
  202                      | declaration_specifiers

  203 identifier_list: IDENTIFIER
  204                | identifier_list ',' IDENTIFIER

  205 type_name: specifier_qualifier_list abstract_declarator
  206          | specifier_qualifier_list

  207 abstract_declarator: pointer direct_abstract_declarator
  208                    | pointer
  209                    | direct_abstract_declarator

  210 direct_abstract_declarator: '(' abstract_declarator ')'
  211                           | '[' ']'
  212                           | '[' '*' ']'
  213                           | '[' STATIC type_qualifier_list assignment_expression ']'
  214                           | '[' STATIC assignment_expression ']'
  215                           | '[' type_qualifier_list STATIC assignment_expression ']'
  216                           | '[' type_qualifier_list assignment_expression ']'
  217                           | '[' type_qualifier_list ']'
  218                           | '[' assignment_expression ']'
  219                           | direct_abstract_declarator '[' ']'
  220                           | direct_abstract_declarator '[' '*' ']'
  221                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  222                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  223                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  224                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  225                           | direct_abstract_declarator '[' type_qualifier_list ']'
  226                           | direct_abstract_declarator '[' assignment_expression ']'
  227                           | '(' ')'
  228                           | '(' parameter_type_list ')'
  229                           | direct_abstract_declarator '(' ')'
  230                           | direct_abstract_declarator '(' parameter_type_list ')'

  231 initializer: '{' initializer_list '}'
  232            | '{' initializer_list ',' '}'
  233            | assignment_expression

  234 initializer_list: designation initializer
  235                 | initializer
  236                 | initializer_list ',' designation initializer
  237                 | initializer_list ',' initializer

  238 designation: designator_list '='

  239 designator_list: designator
  240                | designator_list designator

  241 designator: '[' constant_expression ']'
  242           | '.' IDENTIFIER

  243 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  244 statement: labeled_statement
  245          | compound_statement
  246          | expression_statement
  247          | selection_statement
  248          | iteration_statement
  249          | jump_statement

  250 labeled_statement: IDENTIFIER ':' statement
  251                  | CASE constant_expression ':' statement
  252                  | DEFAULT ':' statement

  253 compound_statement: '{' '}'
  254                   | '{' block_item_list '}'

  255 block_item_list: block_item
  256                | block_item_list block_item

  257 block_item: declaration
  258           | statement

  259 expression_statement: ';'
  260                     | expression ';'

  261 $@1: ε

  262 selection_statement: IF '(' expression ')' statement ELSE $@1 statement
  263                    | IF '(' expression ')' statement
  264                    | SWITCH '(' expression ')' statement

  265 iteration_statement: WHILE '(' expression ')' statement
  266                    | DO statement WHILE '(' expression ')' ';'
  267                    | FOR '(' expression_statement expression_statement ')' statement
  268                    | FOR '(' expression_statement expression_statement expression ')' statement
  269                    | FOR '(' declaration expression_statement ')' statement
  270                    | FOR '(' declaration expression_statement expression ')' statement

  271 jump_statement: GOTO IDENTIFIER ';'
  272               | CONTINUE ';'
  273               | BREAK ';'
  274               | RETURN ';'
  275               | RETURN expression ';'

  276 translation_unit: external_declaration
  277                 | translation_unit external_declaration

  278 external_declaration: function_definition
  279                     | declaration

  280 function_definition: declaration_specifiers declarator declaration_list compound_statement
  281                    | declaration_specifiers declarator compound_statement

  282 declaration_list: declaration
  283                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 47
    '%' (37) 53
    '&' (38) 42 72
    '(' (40) 4 18 25 26 31 32 40 41 49 165 172 173 177 187 188 189 210 227 228 229 230 243 262 263 264 265 266 267 268 269 270
    ')' (41) 4 18 25 26 31 32 40 41 49 165 172 173 177 187 188 189 210 227 228 229 230 243 262 263 264 265 266 267 268 269 270
    '*' (42) 43 51 179 182 190 191 192 193 212 220
    '+' (43) 44 55
    ',' (44) 18 20 32 34 96 112 152 157 159 162 196 199 204 232 236 237 243
    '-' (45) 45 56
    '.' (46) 27 242
    '/' (47) 52
    ':' (58) 21 22 153 154 250 251 252
    ';' (59) 98 99 144 145 243 259 260 266 271 272 273 274 275
    '<' (60) 63
    '=' (61) 84 113 163 238
    '>' (62) 64
    '@' (64) 61
    '[' (91) 24 178 179 180 181 182 183 184 185 186 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 241
    ']' (93) 24 178 179 180 181 182 183 184 185 186 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 241
    '^' (94) 74
    '{' (123) 31 32 137 138 156 157 158 159 231 232 253 254
    '|' (124) 76
    '}' (125) 31 32 137 138 156 157 158 159 231 232 253 254
    '~' (126) 46
    error (256)
    IDENTIFIER (258) 1 15 27 28 138 139 158 159 160 176 203 204 242 250 271
    I_CONSTANT (259) 12
    F_CONSTANT (260) 13
    STRING_LITERAL (261) 16 243
    FUNC_NAME (262) 17
    SIZEOF (263) 39 40
    PTR_OP (264) 28
    INC_OP (265) 29 36
    DEC_OP (266) 30 37
    LEFT_OP (267) 58
    RIGHT_OP (268) 59
    LE_OP (269) 65
    GE_OP (270) 66
    EQ_OP (271) 69
    NE_OP (272) 70
    TH_OP (273) 67
    AND_OP (274) 78
    OR_OP (275) 80
    MUL_ASSIGN (276) 85
    DIV_ASSIGN (277) 86
    MOD_ASSIGN (278) 87
    ADD_ASSIGN (279) 88
    SUB_ASSIGN (280) 89
    LEFT_ASSIGN (281) 90
    RIGHT_ASSIGN (282) 91
    AND_ASSIGN (283) 92
    XOR_ASSIGN (284) 93
    OR_ASSIGN (285) 94
    TYPEDEF_NAME (286) 136
    ENUMERATION_CONSTANT (287) 14
    TYPEDEF (288) 115
    EXTERN (289) 116
    STATIC (290) 117 180 181 183 213 214 215 221 222 224
    AUTO (291) 119
    REGISTER (292) 120
    INLINE (293) 170
    CONST (294) 166
    RESTRICT (295) 167
    VOLATILE (296) 168
    BOOL (297) 130
    CHAR (298) 122
    SHORT (299) 123
    INT (300) 124
    LONG (301) 125
    SIGNED (302) 128
    UNSIGNED (303) 129
    FLOAT (304) 126
    DOUBLE (305) 127
    VOID (306) 121
    COMPLEX (307) 131
    IMAGINARY (308) 132
    STRUCT (309) 140
    UNION (310) 141
    ENUM (311) 156 157 158 159 160
    ELLIPSIS (312) 196
    CASE (313) 251
    DEFAULT (314) 22 252
    IF <val> (315) 262 263
    ELSE <val> (316) 262
    SWITCH (317) 264
    WHILE (318) 265 266
    DO (319) 266
    FOR (320) 267 268 269 270
    GOTO (321) 271
    CONTINUE (322) 272
    BREAK (323) 273
    RETURN (324) 274 275
    ALIGNAS (325) 172 173
    ALIGNOF (326) 41
    ATOMIC (327) 165 169
    GENERIC (328) 18
    NORETURN (329) 171
    STATIC_ASSERT (330) 243
    THREAD_LOCAL (331) 118
    FSTRING_START (332) 7
    FSTRING_END (333) 7
    INTERPOLATION_START (334) 11
    INTERPOLATION_END (335) 11
    STRING_LITERAL_PART (336) 9
    LOWER_THAN_ELSE (337)
    LOWER_THAN_LPAREN (338)


Nonterminals, with rules where they appear

    $accept (108)
        on left: 0
    primary_expression (109)
        on left: 1 2 3 4 5 6
        on right: 23
    f_string_expression (110)
        on left: 7
        on right: 6
    f_string_body (111)
        on left: 8 9 10
        on right: 7 9 10
    interpolation_block (112)
        on left: 11
        on right: 10
    constant (113)
        on left: 12 13 14
        on right: 2
    enumeration_constant (114)
        on left: 15
        on right: 163 164
    string (115)
        on left: 16 17
        on right: 3
    generic_selection (116)
        on left: 18
        on right: 5
    generic_assoc_list (117)
        on left: 19 20
        on right: 18 20
    generic_association (118)
        on left: 21 22
        on right: 19 20
    postfix_expression (119)
        on left: 23 24 25 26 27 28 29 30 31 32
        on right: 24 25 26 27 28 29 30 35
    argument_expression_list (120)
        on left: 33 34
        on right: 26 34
    unary_expression (121)
        on left: 35 36 37 38 39 40 41
        on right: 36 37 39 48 83
    unary_operator (122)
        on left: 42 43 44 45 46 47
        on right: 38
    cast_expression (123)
        on left: 48 49
        on right: 38 49 50 51 52 53
    multiplicative_expression (124)
        on left: 50 51 52 53
        on right: 51 52 53 54 55 56
    additive_expression (125)
        on left: 54 55 56
        on right: 55 56 57 58 59
    shift_expression (126)
        on left: 57 58 59
        on right: 58 59 60 61
    concatenation_expression (127)
        on left: 60 61
        on right: 61 62 63 64 65 66 67
    relational_expression (128)
        on left: 62 63 64 65 66 67
        on right: 63 64 65 66 67 68 69 70
    equality_expression (129)
        on left: 68 69 70
        on right: 69 70 71 72
    and_expression (130)
        on left: 71 72
        on right: 72 73 74
    exclusive_or_expression (131)
        on left: 73 74
        on right: 74 75 76
    inclusive_or_expression (132)
        on left: 75 76
        on right: 76 77 78
    logical_and_expression (133)
        on left: 77 78
        on right: 78 79 80
    logical_or_expression (134)
        on left: 79 80
        on right: 80 81
    conditional_expression (135)
        on left: 81
        on right: 82 97
    assignment_expression (136)
        on left: 82 83
        on right: 18 21 22 33 34 83 95 96 180 181 183 184 186 213 214 215 216 218 221 222 223 224 226 233
    assignment_operator (137)
        on left: 84 85 86 87 88 89 90 91 92 93 94
        on right: 83
    expression (138)
        on left: 95 96
        on right: 4 11 24 96 260 262 263 264 265 266 268 270 275
    constant_expression (139)
        on left: 97
        on right: 153 154 163 173 241 243 251
    declaration (140)
        on left: 98 99 100
        on right: 257 269 270 279 282 283
    declaration_specifiers (141)
        on left: 101 102 103 104 105 106 107 108 109 110
        on right: 98 99 101 103 105 107 109 200 201 202 280 281
    init_declarator_list (142)
        on left: 111 112
        on right: 99 112
    init_declarator (143)
        on left: 113 114
        on right: 111 112
    storage_class_specifier (144)
        on left: 115 116 117 118 119 120
        on right: 101 102
    type_specifier (145)
        on left: 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136
        on right: 103 104 147 148
    struct_or_union_specifier (146)
        on left: 137 138 139
        on right: 134
    struct_or_union (147)
        on left: 140 141
        on right: 137 138 139
    struct_declaration_list (148)
        on left: 142 143
        on right: 137 138 143
    struct_declaration (149)
        on left: 144 145 146
        on right: 142 143
    specifier_qualifier_list (150)
        on left: 147 148 149 150
        on right: 144 145 147 149 205 206
    struct_declarator_list (151)
        on left: 151 152
        on right: 145 152
    struct_declarator (152)
        on left: 153 154 155
        on right: 151 152
    enum_specifier (153)
        on left: 156 157 158 159 160
        on right: 135
    enumerator_list (154)
        on left: 161 162
        on right: 156 157 158 159 162
    enumerator (155)
        on left: 163 164
        on right: 161 162
    atomic_type_specifier (156)
        on left: 165
        on right: 133
    type_qualifier (157)
        on left: 166 167 168 169
        on right: 105 106 149 150 194 195
    function_specifier (158)
        on left: 170 171
        on right: 107 108
    alignment_specifier (159)
        on left: 172 173
        on right: 109 110
    declarator (160)
        on left: 174 175
        on right: 113 114 154 155 177 200 280 281
    direct_declarator (161)
        on left: 176 177 178 179 180 181 182 183 184 185 186 187 188 189
        on right: 174 175 178 179 180 181 182 183 184 185 186 187 188 189
    pointer (162)
        on left: 190 191 192 193
        on right: 174 190 192 207 208
    type_qualifier_list (163)
        on left: 194 195
        on right: 180 182 183 184 185 190 191 195 213 215 216 217 221 223 224 225
    parameter_type_list (164)
        on left: 196 197
        on right: 187 228 230
    parameter_list (165)
        on left: 198 199
        on right: 196 197 199
    parameter_declaration (166)
        on left: 200 201 202
        on right: 198 199
    identifier_list (167)
        on left: 203 204
        on right: 189 204
    type_name (168)
        on left: 205 206
        on right: 21 31 32 40 41 49 165 172
    abstract_declarator (169)
        on left: 207 208 209
        on right: 201 205 210
    direct_abstract_declarator (170)
        on left: 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 225 226 227 228 229 230
        on right: 207 209 219 220 221 222 223 224 225 226 229 230
    initializer (171)
        on left: 231 232 233
        on right: 113 234 235 236 237
    initializer_list (172)
        on left: 234 235 236 237
        on right: 31 32 231 232 236 237
    designation (173)
        on left: 238
        on right: 234 236
    designator_list (174)
        on left: 239 240
        on right: 238 240
    designator (175)
        on left: 241 242
        on right: 239 240
    static_assert_declaration (176)
        on left: 243
        on right: 100 146
    statement (177)
        on left: 244 245 246 247 248 249
        on right: 250 251 252 258 262 263 264 265 266 267 268 269 270
    labeled_statement (178)
        on left: 250 251 252
        on right: 244
    compound_statement (179)
        on left: 253 254
        on right: 245 280 281
    block_item_list (180)
        on left: 255 256
        on right: 254 256
    block_item (181)
        on left: 257 258
        on right: 255 256
    expression_statement (182)
        on left: 259 260
        on right: 246 267 268 269 270
    selection_statement (183)
        on left: 262 263 264
        on right: 247
    $@1 (184)
        on left: 261
        on right: 262
    iteration_statement (185)
        on left: 265 266 267 268 269 270
        on right: 248
    jump_statement (186)
        on left: 271 272 273 274 275
        on right: 249
    translation_unit (187)
        on left: 276 277
        on right: 0 277
    external_declaration (188)
        on left: 278 279
        on right: 276 277
    function_definition (189)
        on left: 280 281
        on right: 278
    declaration_list (190)
        on left: 282 283
        on right: 280 283


State 0

    0 $accept: • translation_unit $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ENUM           shift, and go to state 25
    ALIGNAS        shift, and go to state 26
    ATOMIC         shift, and go to state 27
    NORETURN       shift, and go to state 28
    STATIC_ASSERT  shift, and go to state 29
    THREAD_LOCAL   shift, and go to state 30

    declaration                go to state 31
    declaration_specifiers     go to state 32
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41
    static_assert_declaration  go to state 42
    translation_unit           go to state 43
    external_declaration       go to state 44
    function_definition        go to state 45


State 1

  136 type_specifier: TYPEDEF_NAME •

    $default  reduce using rule 136 (type_specifier)


State 2

  115 storage_class_specifier: TYPEDEF •

    $default  reduce using rule 115 (storage_class_specifier)


State 3

  116 storage_class_specifier: EXTERN •

    $default  reduce using rule 116 (storage_class_specifier)


State 4

  117 storage_class_specifier: STATIC •

    $default  reduce using rule 117 (storage_class_specifier)


State 5

  119 storage_class_specifier: AUTO •

    $default  reduce using rule 119 (storage_class_specifier)


State 6

  120 storage_class_specifier: REGISTER •

    $default  reduce using rule 120 (storage_class_specifier)


State 7

  170 function_specifier: INLINE •

    $default  reduce using rule 170 (function_specifier)


State 8

  166 type_qualifier: CONST •

    $default  reduce using rule 166 (type_qualifier)


State 9

  167 type_qualifier: RESTRICT •

    $default  reduce using rule 167 (type_qualifier)


State 10

  168 type_qualifier: VOLATILE •

    $default  reduce using rule 168 (type_qualifier)


State 11

  130 type_specifier: BOOL •

    $default  reduce using rule 130 (type_specifier)


State 12

  122 type_specifier: CHAR •

    $default  reduce using rule 122 (type_specifier)


State 13

  123 type_specifier: SHORT •

    $default  reduce using rule 123 (type_specifier)


State 14

  124 type_specifier: INT •

    $default  reduce using rule 124 (type_specifier)


State 15

  125 type_specifier: LONG •

    $default  reduce using rule 125 (type_specifier)


State 16

  128 type_specifier: SIGNED •

    $default  reduce using rule 128 (type_specifier)


State 17

  129 type_specifier: UNSIGNED •

    $default  reduce using rule 129 (type_specifier)


State 18

  126 type_specifier: FLOAT •

    $default  reduce using rule 126 (type_specifier)


State 19

  127 type_specifier: DOUBLE •

    $default  reduce using rule 127 (type_specifier)


State 20

  121 type_specifier: VOID •

    $default  reduce using rule 121 (type_specifier)


State 21

  131 type_specifier: COMPLEX •

    $default  reduce using rule 131 (type_specifier)


State 22

  132 type_specifier: IMAGINARY •

    $default  reduce using rule 132 (type_specifier)


State 23

  140 struct_or_union: STRUCT •

    $default  reduce using rule 140 (struct_or_union)


State 24

  141 struct_or_union: UNION •

    $default  reduce using rule 141 (struct_or_union)


State 25

  156 enum_specifier: ENUM • '{' enumerator_list '}'
  157               | ENUM • '{' enumerator_list ',' '}'
  158               | ENUM • IDENTIFIER '{' enumerator_list '}'
  159               | ENUM • IDENTIFIER '{' enumerator_list ',' '}'
  160               | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 46
    '{'         shift, and go to state 47


State 26

  172 alignment_specifier: ALIGNAS • '(' type_name ')'
  173                    | ALIGNAS • '(' constant_expression ')'

    '('  shift, and go to state 48


State 27

  165 atomic_type_specifier: ATOMIC • '(' type_name ')'
  169 type_qualifier: ATOMIC •

    '('  shift, and go to state 49

    $default  reduce using rule 169 (type_qualifier)


State 28

  171 function_specifier: NORETURN •

    $default  reduce using rule 171 (function_specifier)


State 29

  243 static_assert_declaration: STATIC_ASSERT • '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 50


State 30

  118 storage_class_specifier: THREAD_LOCAL •

    $default  reduce using rule 118 (storage_class_specifier)


State 31

  279 external_declaration: declaration •

    $default  reduce using rule 279 (external_declaration)


State 32

   98 declaration: declaration_specifiers • ';'
   99            | declaration_specifiers • init_declarator_list ';'
  280 function_definition: declaration_specifiers • declarator declaration_list compound_statement
  281                    | declaration_specifiers • declarator compound_statement

    IDENTIFIER  shift, and go to state 51
    '('         shift, and go to state 52
    '*'         shift, and go to state 53
    ';'         shift, and go to state 54

    init_declarator_list  go to state 55
    init_declarator       go to state 56
    declarator            go to state 57
    direct_declarator     go to state 58
    pointer               go to state 59


State 33

  101 declaration_specifiers: storage_class_specifier • declaration_specifiers
  102                       | storage_class_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 102 (declaration_specifiers)

    declaration_specifiers     go to state 60
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 34

  103 declaration_specifiers: type_specifier • declaration_specifiers
  104                       | type_specifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 104 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 33
    type_specifier             go to state 34
    struct_or_union_specifier  go to state 35
    struct_or_union            go to state 36
    enum_specifier             go to state 37
    atomic_type_specifier      go to state 38
    type_qualifier             go to state 39
    function_specifier         go to state 40
    alignment_specifier        go to state 41


State 35

  134 type_specifier: struct_or_union_specifier •

    $default  reduce using rule 134 (type_specifier)


State 36

  137 struct_or_union_specifier: struct_or_union • '{' struct_declaration_list '}'
  138                          | struct_or_union • IDENTIFIER '{' struct_declaration_list '}'
  139                          | struct_or_union • IDENTIFIER

    IDENTIFIER  shift, and go to state 62
    '{'         shift, and go to state 63


State 37

  135 type_specifier: enum_specifier •

    $default  reduce using rule 135 (type_specifier)


State 38

  133 type_specifier: atomic_type_specifier •

    $default  reduce using rule 133 (type_specifier)


State 39

  105 declaration_specifiers: type_qualifier • declaration_specifiers
  106                       | type_qualifier •

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ENUM          shift, and go to state 25
    ALIGNAS       shift, and go to state 26
    ATOMIC        shift, and go to state 27
    NORETURN      shift, and go to state 28
    THREAD_LOCAL  shift, and go to state 30

    $default  reduce using rule 106 (declaration_specifiers)
